		- 6 new user customizable flags
		- any base opened in version 3 will be automatically converted to new format in a few seconds (.si3 file is converted to .si4 and then removed, .sg3 and sn3 files are renamed respectively to .sg4 and .sn4)
	* NAG support : add symbolic NAGs using UTF-8 symbols
	* Search position : if the search is done in a refrerence base (not the current one), don't switch to it if the result returns no game
	* Tree mask : 
		- added a sub-menu for searching positions in a mask depending upon various criteria (comments, NAG, color, etc.)
		- added a sub-menu for displaying the Mask content in a tree form
		- remember the most recent opened masks
		- new moves can be added to a mask even if there is no corresponding position in the Tree 
	* FICS : 
		- save options for finding opponents based on login
		- display forecast of win / draw / loss score (in fact sends assess when creating the game)
	* Highlight last move played (switchable and configurable in options menu)
	* added a new call "sc_game info nextMoveUCI"
	* new feature to review game. The user guesses moves played from one side of a played game.
	* game browser : automatically flip board if the main board is flipped
	* updated Scid icon (thanks to Israel Chauca Fuentes)
	* First version of VIAF/PND support for hooking up Wikipedia et al.
	* Correspondence Chess:
		- Sorting of the gamelist  by various criteria like own clock, opponent clock (Xfcc only)
		- Do not show games where the player does not have the move (Xfcc only)
		- Add GUI to set sort criteria
		- Implement sort by "time per move till next TC" including the next timing period (Suggested by Dhanish)
		- Add Edit menu to cc window
- Translations:
---------------
	* updated spanish translation (thanks to Benigno Hernández)
	* updated swedish translation (thanks to Hans Eriksson)
	* updated german translation

scid-4.1
========
- Fixes :
---------
- entering comments for last move of a line was broken
